--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.2.1",
     "babel-plugin-macros": "^3.1.0",
     "framer-motion": "^8.1.3",
+    "hamburgers": "^1.2.1",
     "material-icons-react": "^1.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
