--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "material-icons-react": "^1.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-player": "^2.11.0",
     "react-router": "^6.6.1",
     "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
     "sass": "^1.57.1",
     "styled-components": "^5.3.6",
     "swiper": "^8.4.5",
+    "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
