--- a/package.json
+++ b/package.json
@@ -17,9 +17,16 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
     "babel-plugin-macros": "^3.1.0",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "framer-motion": "^8.1.3",
     "hamburgers": "^1.2.1",
+    "jsonwebtoken": "^9.0.0",
     "material-icons-react": "^1.0.4",
+    "mongoose": "^6.9.0",
+    "nodemon": "^2.0.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-player": "^2.11.0",
@@ -37,7 +44,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "nodemon ./backend/server.js"
   },
   "eslintConfig": {
     "extends": [
@@ -56,5 +64,18 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Tiyyo/CineFlix.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Tiyyo/CineFlix/issues"
+  },
+  "homepage": "https://github.com/Tiyyo/CineFlix#readme"
 }
