--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
     "babel-plugin-macros": "^3.1.0",
+    "express": "^4.18.2",
     "framer-motion": "^8.1.3",
     "hamburgers": "^1.2.1",
     "material-icons-react": "^1.0.4",
+    "nodemon": "^2.0.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-player": "^2.11.0",
@@ -37,7 +39,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "nodemon .backend/server.js"
   },
   "eslintConfig": {
     "extends": [
