--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
     "babel-plugin-macros": "^3.1.0",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "framer-motion": "^8.1.3",
     "hamburgers": "^1.2.1",
+    "jsonwebtoken": "^9.0.0",
     "material-icons-react": "^1.0.4",
     "nodemon": "^2.0.20",
     "react": "^18.2.0",
