--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "babel-plugin-macros": "^3.1.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "framer-motion": "^8.1.3",
     "hamburgers": "^1.2.1",
     "jsonwebtoken": "^9.0.0",
     "material-icons-react": "^1.0.4",
+    "mongoose": "^6.9.0",
     "nodemon": "^2.0.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -43,7 +45,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "nodemon .backend/server.js"
+    "server": "nodemon ./backend/server.js"
   },
   "eslintConfig": {
     "extends": [
