--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
     "babel-plugin-macros": "^3.1.0",
+    "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
