--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "framer-motion": "^8.1.3",
     "hamburgers": "^1.2.1",
     "jsonwebtoken": "^9.0.0",
